# zero2prod

./: Cargo.toml  config.toml  spec.yaml
.github/workflows/: general.yml
configuration/: base.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/infrastructure/: mappers.rs  mod.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
